assets/css/style.css
*{
    margin: 0;
    padding: 0;
    border: 0;
}

body{
    font-family: 'Montserrat', sans-serif;
    color: darkslategrey;
}

h2{
     text-transform: uppercase;   
     letter-spacing: 3px;
     color: darkgreen;
     font-weight: 900;
}

#logo{
    float: left;
    font-size: 250%;
}

#logo , #nav-links{
    line-height: 30px;
}

#nav-links{
    font-size:100%;
    list-style-type:none;
    letter-spacing: 3px;
}

#nav-links li{
    float:right;
    margin-right: 25px;
}

#hero-image{
    height: 600px;
    width: 100%;
    background: url(../images/Football.jpg) no-repeat center center;
}

hero-outer{
    height: 600px;
    width: 100%;
    overflow: hidden;
}

